--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav class="nav-bar"> 
+<html>
+  <head>
+    <title>My first document</title>
+    <meta charset=“UTF-8” />
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+        <nav class="nav-bar"> 
         <ul>
           <li class="dry"> <a href="#structure">Day Structure</a> </li>
           <li class="dry"> <a href="#team">Team</a> </li>
@@ -154,5 +153,5 @@
               </section>
             
             </footer>
-</body>
+  </body>
 </html>
